--- a/src/edit-form-component/edit-form-component.component.html
+++ b/src/edit-form-component/edit-form-component.component.html
@@ -1,4 +1,3 @@
-<theme-switcher />
 <div class="card">
   <p-card>
     <div *ngIf="loading" class="flex justify-content-center">
@@ -6,7 +5,7 @@
     </div>
 
     <form *ngIf="!loading" [formGroup]="dynamicForm" (ngSubmit)="onSubmit()">
-      <h2 class="form-title">Dynamic Form</h2>
+      <h2 class="form-title">Edit Form</h2>
 
       <div class="grid">
         <div *ngFor="let control of formStructure" 
@@ -14,7 +13,7 @@
              [ngClass]="{'lg:col-12': control.type === 'textarea'}">
 
           <!-- Text Inputs -->
-          <div class="field mb-3" *ngIf="['text', 'email', 'password'].includes(control.type)">
+          <div class="field mb-3" *ngIf="['text', 'email'].includes(control.type)">
             <label [for]="control.name" class="block mb-2">{{ control.label }}</label>
             <input [type]="control.type" pInputText [id]="control.name"
               [formControlName]="control.name"
@@ -105,8 +104,11 @@
       </div>
 
       <div class="flex justify-content-end">
-        <p-button type="button" label="Show" severity="info" styleClass="p-button-show mt-3 mr-2" (click)="show()"></p-button>
-        <p-button type="submit" label="Submit" severity="success" styleClass="p-button-primary mt-3"></p-button>
+        <p-button type="button" label="Cancel" severity="secondary" styleClass="p-button-secondary mt-3 mr-2" (click)="cancel()"></p-button>
+        <p-button type="submit" severity="success" styleClass="p-button-primary mt-3" [disabled]="submitting">
+          <span *ngIf="submitting">Updating...</span>
+          <span *ngIf="!submitting">Update</span>
+        </p-button>
       </div>
     </form>
   </p-card>
