--- a/src/login/login.component.html
+++ b/src/login/login.component.html
@@ -43,6 +43,7 @@
             [disabled]="loginForm.invalid || loading"
             [loading]="loading"
             styleClass="login-button"
+            (click)="onSubmit()"
           ></p-button>
         </div>
 
