--- a/src/login/login.component.scss
+++ b/src/login/login.component.scss
@@ -28,7 +28,7 @@
   color: #333;
 }
 
-.form-field input, 
+.form-field input,
 .form-field p-password {
   width: 100%;
 }
@@ -75,4 +75,13 @@
 
 ::ng-deep .p-button {
   padding: 0.75rem 1rem;
+}
+
+.forgot-password {
+  text-align: right;
+  margin-bottom: 1rem;
+
+  .link {
+    font-size: 0.9rem;
+  }
 }
